--- a/portfolio-website/portfolio.html
+++ b/portfolio-website/portfolio.html
@@ -56,7 +56,7 @@
             background-color: #f5f8f5;
         }
         #hero_photo{
-            background-image: url(me.JPG);
+            background-image: url(me-selfie.JPG);
             height: 500px;
             width: 500px;
             border-radius: 50%;
@@ -202,12 +202,8 @@
         </div>
     </div>
     <div id="projects_container">
-        <div><h1 id="projects_title">Web Design/Development</h1></div>
+        <div><h1 id="projects_title">Projects</h1></div>
         <div id="projects_flexbox">
-            <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
-            <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
-            <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
-            <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
             <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
             <a href="" target="_blank"><div class="projects" id=""><h2 class="project_title"></h2></div></a>
         </div>
