made projects bigger

--- a/portfolio-website/portfolio.html
+++ b/portfolio-website/portfolio.html
@@ -156,9 +156,9 @@
             flex-wrap: wrap;
         }
         .projects {
-            width: 300px;
+            width: 400px;
             margin: 25px;
-            height: 300px;
+            height: 400px;
             border-radius: 25px;
             background: linear-gradient(117deg, rgba(149,157,147,1) 0%, rgba(67,79,64,1) 100%);
             text-decoration: none;
@@ -241,7 +241,7 @@
         .content{
             position:relative;
             height:100%;
-            top:225px;
+            top:325px;
             background: rgb(149,157,147);
             background: linear-gradient(128deg, rgba(149,157,147,0.8) 0%, rgba(84,91,82,0.8) 100%);
             text-align: center;
@@ -253,7 +253,8 @@
             color:white;
         }
         .content:hover{
-            top:0px;
+            top:100px;
+            border-radius: 25px;
         }
     </style>
 </head>
