--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <div id="contact_container" class="green-container container">
+        <section id="contact_container" class="green-container container">
             <div>
                 <h1 id="contact_me_title">Contact Me</h1>
             </div>
@@ -74,13 +74,18 @@
                     <form>
                         <div class="form-items">
                             <p>Message</p>
-                            <input style="height: 280px;" type="text">
+                            <textarea rows="15"></textarea>            
+                            <button id="form-submit" type="submit">Submit</button>
                         </div>
         
                     </form>
                 </div>
             </div>
-            <input id="form-submit" type="submit">
-        </div>
+        </section>
+        <footer>
+            <div class="container footer">
+                <p>&copy; 2023 Ethan Robinson. &bullet;&thinsp;&UnderParenthesis;&thinsp;&bullet;</p>
+            </div>
+        </footer>
 </body>
 </html>
